--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -1,6 +1,6 @@
 ---
 apiVersion: tekton.dev/v1beta1
-kind: task
+kind: Task
 metadata:
   name: cleanup
 spec: 
@@ -13,31 +13,30 @@ spec:
       env:
         - name: WORKSPACE_SOURCE_PATH
           value: ci-cd-final-project
-      workingDir: ci-cd-final-project
+      workingDir: /workspace/source
       securityContext:
         runAsNonRoot: false
         runAsUser: 0
       script: |
         #!/usr/bin/env sh
-    set -eu
-    echo "Removing all files from ${WORKSPACE_SOURCE_PATH} ..."
-    # Delete any existing contents of the directory if it exists.
-    #
-    # We don't just "rm -rf ${WORKSPACE_SOURCE_PATH}" because ${WORKSPACE_SOURCE_PATH} might be "/"
-    # or the root of a mounted volume.
-    if [ -d "${WORKSPACE_SOURCE_PATH}" ] ; then
-      # Delete non-hidden files and directories
-      rm -rf "${WORKSPACE_SOURCE_PATH:?}"/*
-      # Delete files and directories starting with . but excluding ..
-      rm -rf "${WORKSPACE_SOURCE_PATH}"/.[!.]*
-      # Delete files and directories starting with .. plus any other character
-      rm -rf "${WORKSPACE_SOURCE_PATH}"/..?*
-    fi
-
+        set -eu
+        echo "Removing all files from ${WORKSPACE_SOURCE_PATH} ..."
+        # Delete any existing contents of the directory if it exists.
+        #
+        # We don't just "rm -rf ${WORKSPACE_SOURCE_PATH}" because ${WORKSPACE_SOURCE_PATH} might be "/"
+        # or the root of a mounted volume.
+        if [ -d "${WORKSPACE_SOURCE_PATH}" ] ; then
+          # Delete non-hidden files and directories
+          rm -rf "${WORKSPACE_SOURCE_PATH:?}"/*
+          # Delete files and directories starting with . but excluding ..
+          rm -rf "${WORKSPACE_SOURCE_PATH}"/.[!.]*
+          # Delete files and directories starting with .. plus any other character
+          rm -rf "${WORKSPACE_SOURCE_PATH}"/..?*
+        fi
 
 ---
 apiVersion: tekton.dev/v1beta1
-kind: task
+kind: Task
 metadata:
   name: nose
 spec:
@@ -45,16 +44,16 @@ spec:
     - name: source
   params:
     - name: args
-      description: Arguments pass to nose
+      description: Arguments passed to nose
       type: string
       default: "-v"
   steps:
     - name: nosetests
       image: python:3.9-slim
-      workingDir: ci-cd-final-project
+      workingDir: /workspace/source
       script: |
-          #!/bin/bash
-          set -e
-          python -m pip install --upgrade pip wheel
-          pip install -r requirements.txt
-          nosetests $(params.args)
+        #!/bin/bash
+        set -e
+        python -m pip install --upgrade pip wheel
+        pip install -r requirements.txt
+        nosetests ${params.args}
