--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,24 +1,26 @@
----
-apiVersion: tekton.dev/v1beta1
-kind: Task
-metadata:
-  name: nose
-  namespace: sn-labs-thomasgarret  # Ensure the correct namespace
-spec:
-  workspaces:
-    - name: source
-  params:
-    - name: args
-      description: Arguments passed to nose
-      type: string
-      default: "-v"
-  steps:
-    - name: nosetests
-      image: python:3.9-slim
-      workingDir: /workspace/source
-      script: |
-        #!/bin/bash
-        set -e
-        python -m pip install --upgrade pip wheel
-        pip install -r requirements.txt
-        nosetests $(params.args)
+name: CI workflow
+
+on:
+  push: 
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+  
+jobs:
+  build: 
+    runs-on: ubuntu-latest
+    container: python:3.9-slim
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: |
+             python -m pip install --upgrade pip
+             pip install -r requirements.txt
+      - name: Lint with flake8
+        run: |
+             flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
+             flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
+      - name: Run unit test with nose
+        run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+
